// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabsRow /> should hide monitoring and add-ons tabs if needed (eg. when we archive a cluster) 1`] = `
<Tabs
  activeKey={0}
  component="div"
  hasBorderBottom={true}
  isBox={false}
  isFilled={false}
  isSecondary={false}
  isVertical={false}
  leftScrollAriaLabel="Scroll left"
  mountOnEnter={false}
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  rightScrollAriaLabel="Scroll right"
  unmountOnExit={false}
  variant="default"
>
  <Tab
    eventKey={0}
    isAriaDisabled={false}
    key="0"
    ouiaId="Overview"
    tabContentId="overviewTabContent"
    title={
      <TabTitleText>
        Overview
      </TabTitleText>
    }
  />
</Tabs>
`;

exports[`<TabsRow /> should render 1`] = `
<Tabs
  activeKey={0}
  component="div"
  hasBorderBottom={true}
  isBox={false}
  isFilled={false}
  isSecondary={false}
  isVertical={false}
  leftScrollAriaLabel="Scroll left"
  mountOnEnter={false}
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  rightScrollAriaLabel="Scroll right"
  unmountOnExit={false}
  variant="default"
>
  <Tab
    eventKey={0}
    isAriaDisabled={false}
    key="0"
    ouiaId="Overview"
    tabContentId="overviewTabContent"
    title={
      <TabTitleText>
        Overview
      </TabTitleText>
    }
  />
  <Tab
    eventKey={1}
    isAriaDisabled={false}
    key="1"
    ouiaId={
      <React.Fragment>
        <TabTitleText>
          Monitoring
        </TabTitleText>
      </React.Fragment>
    }
    tabContentId="monitoringTabContent"
    title={
      <TabTitleText>
        <React.Fragment>
          <TabTitleText>
            Monitoring
          </TabTitleText>
        </React.Fragment>
      </TabTitleText>
    }
  />
</Tabs>
`;

exports[`<TabsRow /> should render monitoring tab with issues icon 1`] = `
<Tabs
  activeKey={0}
  component="div"
  hasBorderBottom={true}
  isBox={false}
  isFilled={false}
  isSecondary={false}
  isVertical={false}
  leftScrollAriaLabel="Scroll left"
  mountOnEnter={false}
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  rightScrollAriaLabel="Scroll right"
  unmountOnExit={false}
  variant="default"
>
  <Tab
    eventKey={0}
    isAriaDisabled={false}
    key="0"
    ouiaId="Overview"
    tabContentId="overviewTabContent"
    title={
      <TabTitleText>
        Overview
      </TabTitleText>
    }
  />
  <Tab
    eventKey={1}
    isAriaDisabled={false}
    key="1"
    ouiaId={
      <React.Fragment>
        <TabTitleText>
          Monitoring
        </TabTitleText>
        <TabTitleIcon
          id="monitoring-issues-icon"
        >
          <ExclamationCircleIcon
            className="danger"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </TabTitleIcon>
      </React.Fragment>
    }
    tabContentId="monitoringTabContent"
    title={
      <TabTitleText>
        <React.Fragment>
          <TabTitleText>
            Monitoring
          </TabTitleText>
          <TabTitleIcon
            id="monitoring-issues-icon"
          >
            <ExclamationCircleIcon
              className="danger"
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </TabTitleIcon>
        </React.Fragment>
      </TabTitleText>
    }
  />
</Tabs>
`;
